第二次修改：修復 scrollBtn 在只有一個商品時不該顯示卻出現的問題、修復付款和送件方式 active 加到錯誤 dom 層級的問題、調整 banner 及其他插圖色調、首頁地點和分類區塊新增文字說明、雙北改成大台北

--- a/src/assets/stylesheets/custom/_custom.scss
+++ b/src/assets/stylesheets/custom/_custom.scss
@@ -43,7 +43,6 @@
     width: 120px;
     height: 180px;
   }
-
   &:hover {
     cursor: pointer;
   }
@@ -53,6 +52,7 @@
     top: 10px;
     font-weight: bold;
     font-size: 1rem;
+    color: $light;
     @include media-breakpoint-up(xl) {
       left: 38px;
       top: 23px;
