第三次修正：取消首頁圖片模糊，改在 list-item-title / subtitle 加 text-shadow 讓文字突出 ＋ 新增電子郵件送件選項，判斷購物車內商品若都是電子票只可用電子郵件送件且不可選貨到付款，否則不可選擇電子郵件送件，並顯示訂單與電子憑證仍將以電子郵件方式寄出

--- a/src/assets/stylesheets/custom/page/_cart.scss
+++ b/src/assets/stylesheets/custom/page/_cart.scss
@@ -212,3 +212,8 @@
 .payment-box.active {
   border: 1px solid $primary;
 }
+.payment-box.disabled {
+  border: 1px solid $gray;
+  color: $gray;
+  pointer-events: none;
+}
