--- a/src/assets/stylesheets/custom/components/_list.scss
+++ b/src/assets/stylesheets/custom/components/_list.scss
@@ -11,8 +11,8 @@
     object-fit: cover;
     mix-blend-mode: overlay;
     z-index: 0;
-    -webkit-filter: blur(1.2px);
-    filter: blur(1.2px);
+    // -webkit-filter: blur(1.2px);
+    // filter: blur(1.2px);
     -webkit-transform: scale(1);
     transform: scale(1);
     -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
@@ -39,19 +39,7 @@
       // transition 時圖片才不會超出 border-radius
       position: relative;
       z-index: 1;
-      background-image: linear-gradient(
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 0) 10%,
-        rgba(70, 70, 70, 0.1) 20%,
-        rgba(50, 50, 50, 0.2) 30%,
-        rgba(0, 0, 0, 0.2) 40%,
-        rgba(0, 0, 0, 0.3) 50%,
-        rgba(0, 0, 0, 0.3) 60%,
-        rgba(0, 0, 0, 0.4) 70%,
-        rgba(0, 0, 0, 0.4) 80%,
-        rgba(0, 0, 0, 0.5) 90%,
-        rgba(0, 0, 0, 0.6) 100%
-      );
+      background: linear-gradient(transparent 20%, rgba(50, 50, 50, 0.85));
     }
     &:hover {
       opacity: 1;
@@ -76,6 +64,7 @@
     margin-bottom: 0.5rem;
     border-bottom: 2px solid $white;
     font-size: 1.25rem;
+    text-shadow: 0 3px 3px rgba(0, 0, 0, 0.9);
     @include media-breakpoint-up(xl) {
       font-size: 2rem;
       padding-bottom: 1rem;
@@ -87,6 +76,7 @@
   }
   &-subtitle {
     font-size: 1rem;
+    text-shadow: 0 3px 3px rgba(0, 0, 0, 0.9);
     @include media-breakpoint-up(lg) {
       font-size: 1.25rem;
     }
