第三次修正：將 scrollbar 修改為平板以下顯示，調整文字未能完整閱讀的問題＋購物車最後一頁加上 cursor:pointer 和下底線以及引導按鈕＋調整首頁分類 tab 圖片

--- a/src/assets/stylesheets/custom/_custom.scss
+++ b/src/assets/stylesheets/custom/_custom.scss
@@ -1,4 +1,5 @@
 @import './utils/border';
+@import './utils/cursor';
 @import './utils/ellipsis';
 @import './utils/font-size';
 @import './utils/objectFit';
@@ -206,4 +207,20 @@
   padding: 16px;
   color: white;
   background: $primary;
+}
+
+.random-box {
+  overflow-x: scroll;
+  @include media-breakpoint-up(lg) {
+    overflow-x: none;
+  }
+  &-inner {
+    height: 120px;
+    @include media-breakpoint-up(sm) {
+      height: 130px;
+    }
+    @include media-breakpoint-up(md) {
+      height: 150px;
+    }
+  }
 }
