--- a/src/assets/stylesheets/custom/page/_index.scss
+++ b/src/assets/stylesheets/custom/page/_index.scss
@@ -39,373 +39,27 @@
     opacity: 0;
   }
 }
-.banner-outer {
-  position: relative;
-  background: $light;
-  padding-bottom: 100%;
-  @include media-breakpoint-up(sm) {
-    padding-bottom: 85%;
-  }
-  @include media-breakpoint-up(md) {
-    padding-bottom: 60%;
-  }
-  @include media-breakpoint-up(lg) {
-    padding-bottom: 45%;
-  }
-}
 .banner {
   background-image: url(https://images.unsplash.com/photo-1583395145517-1e3177037600?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1334&q=80);
   background-repeat: no-repeat;
-  width: 100%;
-  height: 100%;
   background-size: cover;
-  background-position: right 50%;
-  position: absolute;
-  &-title {
+  height: 500px;
+  &-inner {
     position: absolute;
-    z-index: 2;
+    top: 50%;
+    left: 5%;
+    transform: translate(0, -50%);
+  }
+  &-title {
     font-weight: bold;
     font-size: $h2-font-size;
     color: $primary;
     width: 100%;
-    text-align: center;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, 0%);
     @include media-breakpoint-up(sm) {
       font-size: $h1-font-size;
     }
     @include media-breakpoint-up(md) {
       color: $white;
-      top: 50%;
-      left: -20%;
-      transform: translate(0, -50%);
     }
-    @include media-breakpoint-up(lg) {
-      left: -30%;
-    }
-  }
-  &-text,
-  &-subtitle {
-    position: absolute;
-    z-index: 2;
-    border-radius: 50%;
-    background: $white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  &-subtitle {
-    top: 50%;
-    left: 55%;
-    padding: 22px 5px;
-    @include media-breakpoint-up(sm) {
-      padding: 30px 10px;
-      top: 55%;
-      left: 58%;
-    }
-    @include media-breakpoint-up(md) {
-      top: 15%;
-      left: 52%;
-    }
-    @include media-breakpoint-up(lg) {
-      top: 8%;
-      left: 65%;
-    }
-  }
-  &-text {
-    top: 62%;
-    left: 60%;
-    padding: 31px 11px;
-    @include media-breakpoint-up(sm) {
-      padding: 50px 24px;
-      top: 65%;
-      left: 65%;
-    }
-    @include media-breakpoint-up(md) {
-      top: 20%;
-      left: 60%;
-    }
-    @include media-breakpoint-up(lg) {
-      top: 16%;
-      left: 70%;
-    }
-  }
-  &-icon {
-    background-repeat: no-repeat;
-    background-size: contain;
-    position: absolute;
-    background-position: center;
-    width: 20%;
-    height: 20%;
-    &:hover {
-      cursor: pointer;
-    }
-  }
-  &-tpe,
-  &-tnn,
-  &-kao,
-  &-tkt {
-    animation-name: rotate;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-  }
-  &-tpe {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E9%9B%99%E5%8C%97.png?raw=true);
-    right: 54%;
-    bottom: 30%;
-    width: 8%;
-    height: 15%;
-    @include media-breakpoint-up(sm) {
-      display: none;
-    }
-    @include media-breakpoint-up(md) {
-      display: block;
-      right: 38%;
-      bottom: 30%;
-    }
-    @include media-breakpoint-up(lg) {
-      right: 40%;
-      bottom: 28%;
-    }
-  }
-  &-tnn {
-    width: 10%;
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E5%98%89%E5%8D%97.png?raw=true);
-    right: 4%;
-    bottom: 25%;
-    @include media-breakpoint-up(sm) {
-      width: 15%;
-      right: 2%;
-      bottom: 28%;
-    }
-    @include media-breakpoint-up(md) {
-      right: 2%;
-      bottom: 19%;
-    }
-    @include media-breakpoint-up(lg) {
-      right: 1.3%;
-      bottom: 15%;
-    }
-  }
-  &-kao {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E9%AB%98%E5%B1%8F.png?raw=true);
-    width: 7%;
-    right: 90%;
-    bottom: 42%;
-    @include media-breakpoint-up(sm) {
-      right: 90%;
-      bottom: 35%;
-    }
-    @include media-breakpoint-up(md) {
-      display: none;
-    }
-    @include media-breakpoint-up(lg) {
-      display: block;
-      right: 50%;
-      bottom: 55%;
-      width: 4%;
-    }
-  }
-  &-hun {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E8%8A%B1%E6%9D%B1.png?raw=true);
-    right: 58%;
-    bottom: 8%;
-    animation-name: hun;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-    @include media-breakpoint-up(sm) {
-      right: 50%;
-      bottom: 8%;
-    }
-    @include media-breakpoint-up(md) {
-      right: 30%;
-      bottom: 6.5%;
-    }
-    @include media-breakpoint-up(lg) {
-      right: 28%;
-      bottom: 9.285%;
-    }
-  }
-  &-tkt {
-    width: 15%;
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E9%AB%94%E9%A9%97.png?raw=true);
-    right: 39%;
-    bottom: 5%;
-    animation-duration: 3s;
-    @include media-breakpoint-up(sm) {
-      right: 38%;
-      bottom: 10%;
-    }
-    @include media-breakpoint-up(md) {
-      right: 24%;
-      bottom: 10%;
-    }
-    @include media-breakpoint-up(lg) {
-      right: 20%;
-      bottom: 10%;
-    }
-  }
-  &-car {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E5%8C%85%E8%BB%8A.png?raw=true);
-    right: 55%;
-    bottom: 49%;
-    animation-name: rentCar;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-    @include media-breakpoint-up(sm) {
-      right: 60%;
-      bottom: 40%;
-      width: 18%;
-    }
-    @include media-breakpoint-up(md) {
-      right: 65%;
-      bottom: 63%;
-      width: 12%;
-    }
-    @include media-breakpoint-up(lg) {
-      width: 10%;
-      right: 65%;
-      bottom: 70%;
-    }
-  }
-  &-sky-lantern {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E5%A4%A9%E7%87%88.png?raw=true);
-    right: 3%;
-    bottom: 57.14%;
-    animation-name: skyLantern;
-    animation-duration: 15s;
-    animation-iteration-count: infinite;
-  }
-  &-footprint1,
-  &-footprint2,
-  &-footprint3 {
-    width: 9%;
-    height: 9%;
-    animation-duration: 10s;
-    animation-iteration-count: infinite;
-    &:hover {
-      cursor: auto;
-    }
-  }
-  &-footprint1 {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E8%85%B3%E5%8D%B01.png?raw=true);
-    width: 8%;
-    height: 8%;
-    left: 5%;
-    bottom: 25%;
-    animation-name: footprint1;
-    @include media-breakpoint-up(md) {
-      left: 10.71%;
-      bottom: 34%;
-    }
-    @include media-breakpoint-up(lg) {
-      left: 10.71%;
-      bottom: 28.57%;
-    }
-  }
-  &-footprint2 {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E8%85%B3%E5%8D%B02.png?raw=true);
-    left: 10%;
-    bottom: 10%;
-    animation-name: footprint2;
-    @include media-breakpoint-up(sm) {
-      left: 15%;
-      bottom: 15%;
-    }
-    @include media-breakpoint-up(md) {
-      left: 12.85%;
-      bottom: 20%;
-    }
-    @include media-breakpoint-up(lg) {
-      left: 12.85%;
-      bottom: 14.28%;
-    }
-  }
-  &-footprint3 {
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E8%85%B3%E5%8D%B03.png?raw=true);
-    left: 5%;
-    bottom: -2.857%;
-    animation-name: footprint3;
-    @include media-breakpoint-up(sm) {
-      left: 5%;
-    }
-    @include media-breakpoint-up(md) {
-      left: 7.14%;
-      bottom: 1%;
-    }
-    @include media-breakpoint-up(lg) {
-      left: 7.14%;
-      bottom: -2.857%;
-    }
-  }
-}
-@keyframes hun {
-  0% {
-    transform: translateX(0%) rotate(20deg);
-  }
-  25% {
-    transform: translateX(5%) rotate(12deg);
-  }
-  50% {
-    transform: translateX(0%) rotate(20deg);
-  }
-  75% {
-    transform: translateX(-5%) rotate(12deg);
-  }
-  100% {
-    transform: translateX(0%) rotate(20deg);
-  }
-}
-@keyframes rotate {
-  50% {
-    transform: rotate(2deg);
-  }
-}
-@keyframes rentCar {
-  0% {
-    transform: translateX(0%);
-  }
-  50% {
-    transform: translateX(-25%) rotate(3deg);
-  }
-}
-@keyframes skyLantern {
-  50% {
-    bottom: 61.42%;
-  }
-}
-@keyframes footprint1 {
-  0% {
-    opacity: 0;
-  }
-  20% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes footprint2 {
-  0% {
-    opacity: 0;
-  }
-  60% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes footprint3 {
-  0% {
-    opacity: 0;
-  }
-  90% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
   }
 }
