--- a/src/assets/stylesheets/custom/utils/_sizing.scss
+++ b/src/assets/stylesheets/custom/utils/_sizing.scss
@@ -3,11 +3,17 @@
     width: 50%;
   }
 }
+.w-md-25 {
+  @include media-breakpoint-up(md) {
+    width: 25%;
+  }
+}
 .w-md-50 {
   @include media-breakpoint-up(md) {
     width: 50%;
   }
 }
+
 .w-lg-50 {
   @include media-breakpoint-up(lg) {
     width: 50%;
