第四次修正：	解決 tab 陰影尚未 hover 時四邊露出、處理手機版 banner 標題掉字問題、修正購物車查看頁 modal 向下滾動提示，在回到上一頁時錯誤載入的問題、修正完成訂單頁之 RWD 畫面、.random-box 改為 over-flow:hidden（之前打錯打成 over-flow:none）

--- a/src/assets/stylesheets/custom/_custom.scss
+++ b/src/assets/stylesheets/custom/_custom.scss
@@ -227,7 +227,7 @@
 .random-box {
   overflow-x: scroll;
   @include media-breakpoint-up(lg) {
-    overflow-x: none;
+    overflow-x: hidden;
   }
   &-inner {
     height: 120px;
