第四次修正：調整行動版標題 icon 大小

--- a/src/assets/stylesheets/custom/_custom.scss
+++ b/src/assets/stylesheets/custom/_custom.scss
@@ -223,7 +223,10 @@
   background: $primary;
 }
 .topic-icon {
-  width: 4%;
+  width: 6%;
+  @include media-breakpoint-up(sm) {
+    width: 4%;
+  }
 }
 
 .random-box {
