Index.vue 刪掉沒使用到的 bannerSubTitle 和相關程式碼＋addComma 改成全域方式載入 ＋ 整理 custom.scss 歸類到各 page.scss

--- a/src/assets/stylesheets/custom/_custom.scss
+++ b/src/assets/stylesheets/custom/_custom.scss
@@ -19,228 +19,9 @@
 @import './components/tab';
 @import './components/tag';
 
+@import './page/all';
 @import './page/index';
+@import './page/product';
+@import './page/product-list';
+@import './page/article';
 @import './page/cart';
-
-.bg-wave {
-  background-image: url('https://github.com/vvvvvvii/tasteof/blob/main/public/img/%E8%83%8C%E6%99%AF2.png?raw=true');
-  background-repeat: repeat;
-}
-
-.to-top-btn {
-  position: fixed;
-  z-index: $zindex-offcanvas;
-  bottom: 15%;
-  right: 10%;
-  background-image: url('https://github.com/vvvvvvii/tasteof/blob/main/public/img/top.png?raw=true');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 120px;
-  height: 180px;
-  width: 90px;
-  height: 120px;
-  @include media-breakpoint-up(xl) {
-    width: 120px;
-    height: 180px;
-  }
-  &:hover {
-    cursor: pointer;
-  }
-  &-text {
-    position: absolute;
-    left: 29px;
-    top: 10px;
-    font-weight: bold;
-    font-size: 1rem;
-    color: $light;
-    @include media-breakpoint-up(xl) {
-      left: 38px;
-      top: 23px;
-      font-size: 1.25rem;
-    }
-  }
-}
-
-.cable-car {
-  position: absolute;
-  left: 90%;
-  bottom: -40px;
-  background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/cable-car.png?raw=true);
-  background-size: contain;
-  background-position: center;
-  width: 50px;
-  height: 50px;
-  animation-name: cable-car;
-  animation-duration: 20s;
-  animation-iteration-count: infinite;
-}
-@keyframes cable-car {
-  0% {
-    left: 90%;
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    left: 0;
-    opacity: 0;
-  }
-}
-
-.arrangementSelect {
-  width: 200px;
-  padding: 0.625rem 0.75rem;
-  border-radius: 0.5rem;
-  border: 1px solid $primary;
-}
-
-.extend-img-btn {
-  position: absolute !important;
-  top: 0.25rem;
-  left: 90%;
-  color: $black;
-  z-index: 1;
-  background: rgba(255, 255, 255, 0.2);
-  &:hover {
-    background: rgba(255, 255, 255, 0.5);
-  }
-}
-
-.attraction-line {
-  position: relative;
-  &:not(:last-child)::before,
-  &:not(:first-child)::after {
-    content: '';
-    position: absolute;
-    top: 12px;
-    background: $black;
-    height: 3px;
-  }
-
-  &:not(:last-child)::before {
-    left: calc(50% + 10px);
-    width: calc(100% - 15px);
-  }
-  &:not(:first-child)::after {
-    right: calc(50% + 10px);
-    width: calc(100% - 25px);
-  }
-}
-
-.article-main-img {
-  width: 100%;
-  height: 350px;
-}
-
-.sky-lantern,
-.cloud1,
-.cloud2,
-.cloud3 {
-  position: absolute;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 100px;
-  height: 100px;
-  animation-duration: 50s;
-  animation-iteration-count: 5;
-}
-.sky-lantern {
-  top: 15%;
-  left: 60%;
-  background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/banner%20%E5%A4%A9%E7%87%88.png?raw=true);
-  animation-name: skyLantern;
-}
-.cloud {
-  &1 {
-    top: 10%;
-    left: 60%;
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/cloud%201.png?raw=true);
-    animation-name: cloud1;
-  }
-  &2 {
-    top: 15%;
-    left: 13%;
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/cloud%202.png?raw=true);
-    animation-name: cloud2;
-  }
-  &3 {
-    top: 8%;
-    left: 40%;
-    background-image: url(https://github.com/vvvvvvii/tasteof/blob/main/public/img/cloud%203.png?raw=true);
-    animation-name: cloud3;
-  }
-}
-@keyframes skyLantern {
-  0% {
-    top: 15%;
-  }
-  50% {
-    top: 10%;
-  }
-}
-@keyframes cloud1 {
-  0% {
-    left: 60%;
-  }
-  50% {
-    left: 65%;
-  }
-}
-@keyframes cloud2 {
-  0% {
-    left: 13%;
-  }
-  50% {
-    left: 18%;
-  }
-}
-@keyframes cloud3 {
-  0% {
-    left: 40%;
-  }
-  50% {
-    left: 35%;
-  }
-}
-.user-img {
-  width: 50px;
-  height: 50px;
-  object-fit: cover;
-  border-radius: 50%;
-}
-.buy-now-btn {
-  position: fixed;
-  z-index: $zindex-offcanvas;
-  bottom: 0;
-  font-size: 1.25rem;
-  text-align: center;
-  width: 100%;
-  padding: 16px;
-  color: white;
-  background: $primary;
-}
-.topic-icon {
-  width: 6%;
-  @include media-breakpoint-up(sm) {
-    width: 4%;
-  }
-}
-
-.random-box {
-  overflow-x: scroll;
-  @include media-breakpoint-up(lg) {
-    overflow-x: hidden;
-  }
-  &-inner {
-    height: 120px;
-    @include media-breakpoint-up(sm) {
-      height: 130px;
-    }
-    @include media-breakpoint-up(md) {
-      height: 150px;
-    }
-  }
-}
